--- a/test.yml
+++ b/test.yml
@@ -1,5 +1,10 @@
 ---
-- name: Get the fortimanager's ADOMs
+- hosts: fortimanagers
+  connection: httpapi
+  collections:
+    - fortinet.fortimanager
+  tasks:
+    - name: Get the fortimanager's ADOMs
       fmgr_fact:
         facts:
           selector: dvmdb_adom
