--- a/test3.yml
+++ b/test3.yml
@@ -1,4 +1,13 @@
 ---
+- hosts: 192.168.0.104
+  collections:
+    - fortinet.fortimanager
+  connection: httpapi
+  vars:
+     ansible_httpapi_use_ssl: True
+     ansible_httpapi_validate_certs: False
+     ansible_httpapi_port: 443
+  tasks:
  - name: Add device fgt-warehouse
    fmgr_dvm_cmd_add_device:
      dvm_cmd_add_device:
@@ -10,3 +19,5 @@
          desc: 'added by ansible'
        flags:
          - none
+
+
