--- a/test3.yml
+++ b/test3.yml
@@ -1,4 +1,3 @@
----
 - hosts: 192.168.0.104
   collections:
     - fortinet.fortimanager
@@ -8,16 +7,23 @@
      ansible_httpapi_validate_certs: False
      ansible_httpapi_port: 443
   tasks:
- - name: Add device fgt-warehouse
-   fmgr_dvm_cmd_add_device:
-     dvm_cmd_add_device:
-       adom: 'SD-WAN-Lab'
-       device:
-         name: 'fgt-warehouse'
-         adm_usr: 'fgtadmin'
-         mgmt_mode: fmgfaz
-         desc: 'added by ansible'
-       flags:
-         - none
-
+   - name: Add a device to the Device Manager database.
+     fmgr_dvm_cmd_add_device:
+        bypass_validation: False
+        dvm_cmd_add_device:
+           adom: SD-WAN-Lab
+           device:
+              adm_pass: fgtadmin
+              mgmt_mode: fgmfaz
+              name: fgt-warehouse-ansible
+              os_type: fos
+              os_ver: '6.4'
+              platform_str: Fortigate-81-POE
+              sn: FG81EPTK19002078
+           flags:
+             - none
+           groups:
+             -
+                 name: warehouse
+                 vdom: SD-WAN-Lab
 
