--- a/test3.yml
+++ b/test3.yml
@@ -10,11 +10,20 @@
   tasks:
    - name: Add a device to the Device Manager database.
      fmgr_dvm_cmd_add_device:
+        bypass_validation: False
         dvm_cmd_add_device:
            adom: SD-WAN-Lab
            device:
               adm_usr: fgtadmin
               mgmt_mode: fmgfaz
               name: fgt-warehouse-ansible
+              os_type: fos
+              os_ver: '6.0'
+              platform_str: Fortigate-81-POE
+              sn: FG81EPTK19002078
            flags:
              - none
+           groups:
+             -
+                 name: warehouse
+                 vdom: SD-WAN-Lab
