--- a/test3.yml
+++ b/test3.yml
@@ -14,6 +14,7 @@
         dvm_cmd_add_device:
            adom: SD-WAN-Lab
            device:
+              device action: add_model
               adm_usr: fgtadmin
               mgmt_mode: fmgfaz
               name: fgt-warehouse-ansible
