--- a/test3.yml
+++ b/test3.yml
@@ -20,6 +20,7 @@
               name: fgt-warehouse-ansible
               os_type: fos
               os_ver: '6.0'
+              platform_str: FortiGate-81E-POE
               sn: FG81EPTK19002078
            flags:
              - none
