--- a/test3.yml
+++ b/test3.yml
@@ -23,6 +23,7 @@
               patch: '4'
               platform_str: FortiGate-81E-POE
               sn: FG81EPTK19002078
+              version: '600'
            flags:
              - none
            groups:
