--- a/test3.yml
+++ b/test3.yml
@@ -25,8 +25,5 @@
               sn: FG81EPTK19002078
               #version: '600'
            flags:
-             - none
-           groups:
-             -
-                 name: warehouse
-                 vdom: SD-WAN-Lab
+             - creat_task
+             - nonblocking
