--- a/Add-Device-Details.yml
+++ b/Add-Device-Details.yml
@@ -21,5 +21,5 @@
               address: Belfast, England
               branch-id: '4'
               remote-dc-id:''
-              BGP-code: '19.6.0'
+              BGP-code: '19.6.0',
            name: fgt-warehouse-ansible
