--- a/script-template.yml
+++ b/script-template.yml
@@ -24,7 +24,7 @@
                              ],
                         "scope member": [
                           {
-                            "name": "{{name_fgt_ztp}}",
+                            "name": "fgt-warehouse-ansible",
                             "vdom": "root"
                           }
                       ]
