--- a/Interface-LAN.yml
+++ b/Interface-LAN.yml
@@ -23,11 +23,11 @@ config system interface
     set vdom root
   next
  end
-config system global
-  set hostname \"fgt-warehouse-ansible\"
-  set gui-device-latitude \"54.5973\"
-  set gui-device-longitude \"-5.9301\"
-end
+#config system global
+#  set hostname \"fgt-warehouse-ansible\"
+#  set gui-device-latitude \"54.5973\"
+#  set gui-device-longitude \"-5.9301\"
+#end
 
            name: Configure Warehouse Interface
            script_schedule:
