--- a/Interface-LAN.yml
+++ b/Interface-LAN.yml
@@ -13,25 +13,8 @@
         adom: SD-WAN-Lab
         state: present
         dvmdb_script:
-           content: #Interface
-           config system interface
-  edit internal
-    set ip 172.19.6.1 255.255.255.0
-    set mode static
-    set type hard-switch
-    set allowaccess ping https ssh fgfm fabric
-    set vdom root
-  next
- end
+           content: test
            desc: Add LAN Interface
            name: LAN Interface
-           script_schedule:
-             -
-
-                 day_of_week: unknown
-                 device: fgt-warehouse-ansible
-                 name: LAN Interface
-                 run_on_db: enable
-                 type: onetime
            target: device_database
            type: cli
