--- a/Interface-LAN.yml
+++ b/Interface-LAN.yml
@@ -22,12 +22,12 @@ config system interface
  set allowaccess ping https ssh fgfm fabric
  set vdom root
  next
- end
+end
 config system global
- set hostname \"{{name_fgt_ztp}}\"
+ set hostname \"fgt-warehouse-ansible\"
  set gui-device-latitude \"54.5973\"
  set gui-device-longitude \"-5.9301\"
- end
+end
            content:
            desc: Add LAN Interface
            name: LAN Interface
