--- a/Interface-LAN.yml
+++ b/Interface-LAN.yml
@@ -14,14 +14,14 @@
         state: present
         dvmdb_script:
            content:
-             config system interface,
-               edit internal,
-                 set ip 172.19.6.1 255.255.255.0,
-                 set mode static,
-                 set type hard-switch,
-                 set allowaccess ping https ssh fgfm fabric,
-                 set vdom root,
-               next,
+             config system interface
+               edit internal
+                 set ip 172.19.6.1 255.255.255.0
+                 set mode static
+                 set type hard-switch
+                 set allowaccess ping https ssh fgfm fabric
+                 set vdom root
+               next
              end           
            desc: Add LAN Interface
            name: LAN Interface
