--- a/Interface-LAN.yml
+++ b/Interface-LAN.yml
@@ -13,7 +13,7 @@
         adom: SD-WAN-Lab
         state: present
         dvmdb_script:
-           content:
+           content:>
              "config system interface
                edit internal
                  set ip 172.19.6.1 255.255.255.0
