--- a/Interface-LAN.yml
+++ b/Interface-LAN.yml
@@ -14,7 +14,7 @@
         state: present
         dvmdb_script:
            content:>
-             "config system interface
+             config system interface
                edit internal
                  set ip 172.19.6.1 255.255.255.0
                  set mode static
@@ -22,7 +22,7 @@
                  set allowaccess ping https ssh fgfm fabric
                  set vdom root
                next
-             end"           
+             end           
            desc: Add LAN Interface
            name: LAN Interface
            target: device_database
