--- a/Interface-LAN.yml
+++ b/Interface-LAN.yml
@@ -22,7 +22,12 @@
                  set allowaccess ping https ssh fgfm fabric
                  set vdom root
                next
-             end           
+             end
+             config system global
+               set hostname fgt-warehouse-ansible
+               set guidevice-latitude 54.59.73
+               set gui-device-longitude -5.9301
+             end               
            desc: Add LAN Interface
            name: LAN Interface
            target: device_database
