--- a/Branch-LAN.yml
+++ b/Branch-LAN.yml
@@ -25,25 +25,25 @@
                        vdom: root
                        local-intf: internal
 
-                 _scope:
+                 _scope1:
                    -
                        name: Branch_1
                        vdom: root
                        local-intf: port3                 
 
-                 _scope:
+                 _scope2:
                    -
                        name: Branch_2
                        vdom: root
                        local-intf: port3                  
 
-                 _scope:
+                 _scope3:
                    -
                        name: AWS-FGT
                        vdom: root
                        local-intf: port2
 
-                 _scope:
+                 _scope4:
                    -
                        name: fgt-warehouse-ansible
                        vdom: root
