--- a/Branch-LAN.yml
+++ b/Branch-LAN.yml
@@ -19,34 +19,39 @@
            description: Branch-LAN
            dynamic_mapping:
              -
-                 _scope:
+                 _scope:{
                    -
                        name: Warehouse_1
                        vdom: root
+					 }  
                        local-intf: internal
 
-                 _scope1:
+                 _scope:{
                    -
                        name: Branch_1
                        vdom: root
+					  } 
                        local-intf: port3                 
 
-                 _scope2:
+                 _scope:{
                    -
                        name: Branch_2
                        vdom: root
+					  } 
                        local-intf: port3                  
 
-                 _scope3:
+                 _scope:{
                    -
                        name: AWS-FGT
                        vdom: root
+					  } 
                        local-intf: port2
 
-                 _scope4:
+                 _scope:{
                    -
                        name: fgt-warehouse-ansible
                        vdom: root
+					  } 
                        local-intf: internal
                  
            name: Branch-LAN
