--- a/Branch-LAN.yml
+++ b/Branch-LAN.yml
@@ -22,36 +22,36 @@
                  _scope:{
                    -
                        name: Warehouse_1
-                       vdom: root
-		}  
+                       vdom: root }
+					      
                        local-intf: internal
 
                  _scope:{
                    -
                        name: Branch_1
-                       vdom: root
-		} 
+                       vdom: root }
+					   
                        local-intf: port3                 
 
                  _scope:{
                    -
                        name: Branch_2
-                       vdom: root
-		} 
+                       vdom: root }
+					   
                        local-intf: port3                  
 
                  _scope:{
                    -
                        name: AWS-FGT
-                       vdom: root
-		} 
+                       vdom: root }
+					   
                        local-intf: port2
 
                  _scope:{
                    -
                        name: fgt-warehouse-ansible
-                       vdom: root
-		} 
+                       vdom: root }
+					   
                        local-intf: internal
                  
            name: Branch-LAN
