--- a/Branch-LAN.yml
+++ b/Branch-LAN.yml
@@ -3,7 +3,7 @@
   collections:
     - fortinet.fortimanager
   connection: httpapi
-  vars:
+  vars:,
      ansible_httpapi_use_ssl: True
      ansible_httpapi_validate_certs: False
      ansible_httpapi_port: 443
