--- a/Branch-LAN.yml
+++ b/Branch-LAN.yml
@@ -10,12 +10,12 @@
   tasks:
     -   name: 'Branch-LAN'
         fmgr_generic:
-             json: >
+             json: |
                   {
                    "method":"update",
                    "params": [
                         {
-                           "url": "/pm/config/adom/SD-WAN-Lab/obj/dynamic/interface/",,
+                           "url": "/pm/config/adom/SD-WAN-Lab/obj/dynamic/interface/",
                            "data": [
                                 {
                                     "name": "Branch-LAN",
