--- a/Branch-LAN.yml
+++ b/Branch-LAN.yml
@@ -8,29 +8,40 @@
      ansible_httpapi_validate_certs: False
      ansible_httpapi_port: 443
   tasks:
-    -   name: 'Branch-LAN'
-        fmgr_generic:
-             json: |
-                  {
-                   "method":"update",
-                   "params": [
-                    {
-                        "url": "/pm/config/adom/SD-WAN-Lab/obj/dynamic/interface/",
-                        "data": {
-                           "name": "Branch-LAN",
-                           "description": "Branc-LAN",
-                           "default-mapping": "1",
-                           "defmap-intf": "port3",                           
-                           "dynamic_mapping": [
-                                {
-                                    "_scope": {
-                                        "name": "Warehouse_1",
-                                        "vdom": "root"
-                                    }
-                                    "local-intf": "internal"
-                                }
-                                              ]
-                                }
-                    }
-                              ]
-                  }
+   - name: Branch-LAN
+     fmgr_dynamic_interface:
+        adom: SD-WAN-Lab
+        state: present
+        dynamic_interface:
+           color: '11'
+           default-mapping: enable
+           defmap-intf: port3
+           description: Branch-LAN
+           dynamic_mapping:
+             
+                 -scope:
+                       name: Warehouse_1
+                       vdom: root
+                 local-intf: internal
+
+                 -scope:
+                       name: Branch_1
+                       vdom: root
+                 local-intf: port3                 
+
+                 -scope:
+                       name: Branch_2
+                       vdom: root
+                 local-intf: port3                  
+
+                 -scope:
+                       name: AWS-FGT
+                       vdom: root
+                 local-intf: port2
+
+                 -scope:
+                       name: fgt-warehouse-ansible
+                       vdom: root
+                 local-intf: internal
+                 
+           name: Branch-LAN
